--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
+    "vant": "^2.13.2",
     "vue": "^2.6.14",
+    "vue-multiselect": "^2.1.8",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
@@ -18,6 +20,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "babel-plugin-import": "^1.13.8",
     "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
