--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -62,11 +62,21 @@
 			<artifactId>pdfbox</artifactId>
 			<version>2.0.28</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.12.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.5.13</version>
+		</dependency>
+		<dependency>
+			<groupId>co.elastic.clients</groupId>
+			<artifactId>elasticsearch-java</artifactId>
+			<version>8.1.1</version>
 		</dependency>
 	</dependencies>
 
