--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,2 +1,10 @@
 server:
     port: 8088
+
+spring:
+    datasource:
+        url: jdbc:mysql://120.55.14.3:3306/ds?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+        username: rgg
+        password: zju20230
+        driver-class-name: com.mysql.cj.jdbc.Driver
+
