--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.2",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
+    "relation-graph": "^2.1.23",
     "vant": "^2.13.2",
     "vue": "^2.6.14",
     "vue-multiselect": "^2.1.8",
