--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,8 +3,9 @@ server:
 
 spring:
     datasource:
-        url: jdbc:mysql://120.55.14.3:3306/ds?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+        url: jdbc:mysql://120.55.14.3:3306/ds?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
         username: rgg
         password: zju20230
         driver-class-name: com.mysql.cj.jdbc.Driver
-
+buildIndex:
+    enabled: false
